# ai-software-engineering-platform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cli/: README.md
core/: README.md
core/controls/: CTL-AC-0001.yaml
core/evidence/: EVD-0001.yaml
core/requirements/: REQ-0001.yaml
core/risks/: RSK-0001.yaml
core/schemas/: README.md  control.schema.json  engine-manifest.schema.json  evidence.schema.json  glossary.schema.json  localization.schema.json  profile.schema.json  project-manifest.schema.json  requirement.schema.json  risk.schema.json  task.schema.json
core/schemas/common/: identifiers.schema.json
core/tasks/: TSK-0001.yaml
docs/: README.md
docs/architecture/: overview.md
docs/architecture/adr/: 0001-canonical-language.md  README.md  (+6 more)
docs/constitution/: CONSTITUTION.md
docs/governance/: GOVERNANCE.md
docs/security/: SECURITY.md
engines/: README.md
engines/audit/: engine.manifest.yaml
engines/converter/: engine.manifest.yaml
engines/generator/: engine.manifest.yaml
engines/github/: engine.manifest.yaml
engines/upgrade/: engine.manifest.yaml
examples/: README.md
examples/adaptive-trading-platform/: project.manifest.yaml
glossary/: README.md  glossary.en.yaml
harness/: README.md
locales/: README.md
locales/ja/: platform.localization.yaml
profiles/: README.md
profiles/iso27001-baseline/: profile.yaml
profiles/secure-backend/: profile.yaml
templates/: README.md
tests/: README.md  conftest.py  test_examples_validate.py  test_schemas_valid.py
